# SimpleEasyCLogger

./: .clang-format  .clang-tidy  LICENSE  README.md
SECLogger/: CMakeLists.txt
SECLogger/SimpleEasyCLogger/: CMakeLists.txt  main.c
SECLogger/SimpleEasyCLogger/inc/: init.h  lib.h  logger.h  queue.h
SECLogger/SimpleEasyCLogger/src/: build_string.c  init.c  logger.c  queue.c
SECLogger/test/: CMakeLists.txt
dependencies/: dependencies_defs.cmake
